* Mon May 23 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.21
- Cluster changes from Michael, intended to prevent a stray master
  from trashing a cluster:
  + Ignore heartbeats from peers claiming to be the master before the
    timeout on the old master has expired.
  + A master receiving a stray heartbeat sends a unicast HB back, which
    should cause the rogue to die due to the tie-breaker code.
  + Keep probing the master for late heartbeats.
  + Drop BGP as soon as we become master with the minumum required peers.
  + Any PING seen from a master forces an election (rather than just
    where basetime is zero).
  + A slave which receives a LASTSEEN message (presumably a restarted
    master) sends back new message type, C_MASTER which indicates the
    address of the current master.
- New config option: cluster_master_min_adv which determines the minimum
  number of up to date slaves required before the master will drop
  routes.

* Mon May 16 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.20
- Add handling of "throttle=N" RADIUS attributes.
- Fix RADIUS indexing (should have 16K entries with 64 sockets).

* Sat May 7 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.19
- Fix leak in session freelist when initial RADIUS session allocation
  fails.

* Tue May 3 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.18
- Add a Cisco-Avpair with intercept details to RADIUS Start/Stop
  records.

* Mon May 2 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.17
- Only send RADIUS stop record in sessionshutdown when there's an ip address.
- Reset .die on master takeover (so that dying sessions don't have to
  hang around until the new master has the same uptime as the old one).
- Update .last_packet in cluster_handle_bytes only when there have
  been bytes received from the modem (dead sessions were having the
  idle timeout reset by stray packets).

* Mon Feb 14 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.16
- Ensure that sessionkill is not called on an unopened session (borks