@@ -283,7 +283,11 @@ the <EM>uptime</EM> command on the CLI.
 </LI>
 
 <LI><B>cleanup_interval</B> (int)<BR>
-Interval between regular cleanups (in seconds).
+Interval between regular cleanups in seconds (default: 2).
+</LI>
+
+<LI><B>cleanup_limit</B> (int)<BR>
+Maximum number of session actions to perform each cleanup (default: 50).
 </LI>
 
 <LI><B>multi_read_count</B> (int)<BR>
