@@ -2,7 +2,7 @@
 .de Id
 .ds Dt \\$4 \\$5
 ..
-.Id $Id: startup-config.5,v 1.3.2.2 2005-05-23 13:48:30 bodea Exp $
+.Id $Id: startup-config.5,v 1.3.2.3 2005-05-30 02:55:42 bodea Exp $
 .TH STARTUP-CONFIG 5 "\*(Dt" L2TPNS "File Formats and Conventions"
 .SH NAME
 startup\-config \- configuration file for l2tpns
@@ -132,7 +132,10 @@ uptime
 command on the CLI.
 .TP
 .B cleanup_interval
-Interval between regular cleanups (in seconds).
+Interval between regular cleanups in seconds (default: 2).
+.TP
+.B cleanup_limit
+Maximum number of session actions to perform each cleanup (default: 50).
 .TP
 .B multi_read_count
 Number of packets to read off each of the UDP and TUN fds when
