@@ -1,3 +1,12 @@
+* Mon May 30 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.22
+- Show session open time in "show session"/"show user" detailed output.
+- Have slaves with BGP configured drop BGP on receipt of a shutdown
+  signal, but hang about for an additional 5s to process any remaining
+  traffic.
+- Replace MAX_ACTIONS with a "cleanup_limit" config option, drop the
+  default for "cleanup_interval" to 2s (so as to process tunnel/RADIUS
+  retries more promptly).
+
 * Mon May 23 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.21
 - Cluster changes from Michael, intended to prevent a stray master
   from trashing a cluster:
